--- a/galeria.html
+++ b/galeria.html
@@ -107,8 +107,8 @@
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/010.webp);" data-target="carousel-item-10"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-11"></button>
+    <div class="carta-wrapper" data-pass="sorpresa">
+      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/011.webp);" data-target="carousel-item-11"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
@@ -393,7 +393,7 @@
          <div class="carousel-item Cnormal" id="carousel-item-11" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/011.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
@@ -827,13 +827,6 @@
        </DIV>
 </div>
 
-<!-- Ventana emergente para INFO ---------------------------------------------------------->
-<div id="ventanaInfo" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999;">
-         <DIV class="contenedorbotoncerrar">
-          <button onclick="cerrarInfo()" class="botonatrasexpansiones">X</button>
-       </DIV>
-  <iframe src="info.html" style="width: 100%; height: 100%; border: none;"></iframe>
-</div>
 
 
 
