--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div  class="logo lazy-michi"></div>
 <div class="botonesmenu">
   <a onclick="mostrarGaleria()"  class="galeriaapp lazy-michi" style="background-image: url(./assets/galeriacartasicon.webp);">  </a>
-  <div  class="quees lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);" >  </div>
+  <a href="que_es_michibox.html"  class="quees lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);" >  </a>
   <div class="insta lazy-michi" style="background-image: url(./assets/boton_NOTICIAS.webp);">  </div>
   <button id="installBtn" class="descargarapp lazy-michi" style="background-image: url(./assets/boton_descargar.webp);"> </button>
 </div>
