--- a/que_es_michibox.html
+++ b/que_es_michibox.html
@@ -29,12 +29,23 @@
 <div class="contenedorgeneral">
 
       <div class="queescontenedor">
-<div class="bannerquees" style="background-image: url(./assets/background_BANNER_003.webp);"></div>
+<div class="bannerquees" style="background-image: url(./assets/background_BANNER_004.webp);"></div>
 <div class="bannerdescripcion">
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime consequuntur est nihil officiis id dolores, recusandae obcaecati harum et officia, illum praesentium consequatur ratione velit, excepturi animi veniam? Quas, modi.</p>
 </div>
+<button class="botonavanzar" onclick="document.getElementById('primera').scrollIntoView({behavior: 'smooth'});"></button>
+
       </div>
-      <div class="queescontenedor">
+
+<div id="primera" class="queescontenedor">
+<div class="bannerquees" style="background-image: url(./assets/background_BANNER_004.webp);"></div>
+<div class="bannerdescripcion">
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime consequuntur est nihil officiis id dolores, recusandae obcaecati harum et officia, illum praesentium consequatur ratione velit, excepturi animi veniam? Quas, modi.</p>
+</div>
+<button class="botonavanzar" onclick="document.getElementById('segunda').scrollIntoView({behavior: 'smooth'});"></button>
+      </div>
+
+<div id="segunda" class="queescontenedor">
 <div class="bannerquees" style="background-image: url(./assets/background_BANNER_004.webp);"></div>
 <div class="bannerdescripcion">
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime consequuntur est nihil officiis id dolores, recusandae obcaecati harum et officia, illum praesentium consequatur ratione velit, excepturi animi veniam? Quas, modi.</p>
