--- a/index.html
+++ b/index.html
@@ -1,105 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  
+  <title>Michi Box-Card Game</title>
+  
+  <!-- Estilos -->
+  <link rel="stylesheet" type="text/css" href="style/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="style/style.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Fredericka+the+Great&family=Kranky&family=Lacquer&family=Slackside+One&display=swap" rel="stylesheet">
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" href="/assets/icon-192.png">   
 
+  <!-- Librerías externas -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+</head>
+<body>
+<main>
+  <!------------------------BANNER PRESENTACION------------------------------------->
+  <div class="contenedor">
+    <div class="logo lazy-michi"></div>
+    <div class="botonesmenu">
+      <a onclick="mostrarGaleria()" class="galeriaapp lazy-michi" style="background-image: url(./assets/galeriacartasicon.webp);"></a>
+      <a  class="quees lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);"></a>
+      <div class="insta lazy-michi" style="background-image: url(./assets/boton_NOTICIAS.webp);"></div>
+      <button id="installBtn" class="descargarapp lazy-michi" style="background-image: url(./assets/boton_descargar.webp);"></button>
+    </div>
+    <p class="descripcionbanner">Michi box - Juego de gatos coleccionables. Proyectual Digitalización I 2025. diseño y realización: José Ignacio Pyptyk</p>
+  </div>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    
-    <link rel="stylesheet" tipe="text/css" href="style/style.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Fredericka+the+Great&family=Kranky&family=Lacquer&family=Slackside+One&display=swap" rel="stylesheet">
-<link rel="manifest" href="manifest.json">
-<link rel="icon" type="image/png" href="/assets/icon-192.png">   
-<meta charset="UTF-8" />
+  <div id="galeriaContainer" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1000;">
+    <iframe src="galeria.html" style="width: 100%; height: 100%; border: none;"></iframe>
+  </div>
+</main>
 
-    <title>Michi Box-Card Game</title>
-    <link rel="stylesheet" type="text/css" href="style/normalize.css" />
-
+<!-- Scripts al final para que cargue todo el DOM primero -->
 <script>
   let deferredPrompt = null;
 
-  window.addEventListener("beforeinstallprompt", (e) => {
-    console.log("✅ Evento beforeinstallprompt recibido");
+  document.addEventListener("DOMContentLoaded", () => {
+    const installBtn = document.getElementById("installBtn");
 
-    e.preventDefault(); // Evita el cartel automático
-    deferredPrompt = e; // Guardamos el evento para usarlo luego
-
-    // Mostramos el botón solo si se puede instalar
-    document.addEventListener("DOMContentLoaded", () => {
-      const installBtn = document.getElementById("installBtn");
-      if (installBtn) installBtn.style.display = "block";
-    });
-  });
-</script>
-
-
-  </head>
-  <body>
-    <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const installBtn = document.getElementById("installBtn");
-
-  installBtn.addEventListener("click", async (e) => {
-    e.preventDefault();
-
-    if (!deferredPrompt) return;
-
-    deferredPrompt.prompt();
-    const result = await deferredPrompt.userChoice;
-    console.log("Instalación:", result.outcome);
-
-    if (result.outcome === "accepted") {
-      console.log("✅ App instalada");
+    // 🔹 Ocultar el botón si ya estamos en modo app (PWA instalada)
+    const isStandalone = window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone === true;
+    if (isStandalone && installBtn) {
       installBtn.style.display = "none";
-    } else {
-      console.log("❌ Instalación cancelada");
     }
 
-    deferredPrompt = null;
+    // 🔹 Evento para mostrar botón solo si se puede instalar
+    window.addEventListener("beforeinstallprompt", (e) => {
+      e.preventDefault();
+      deferredPrompt = e;
+      if (installBtn) installBtn.style.display = "block";
+    });
+
+    // 🔹 Manejo del clic en el botón de instalación
+    if (installBtn) {
+      installBtn.addEventListener("click", async (e) => {
+        e.preventDefault();
+        if (!deferredPrompt) return;
+
+        deferredPrompt.prompt();
+        const result = await deferredPrompt.userChoice;
+        console.log("Instalación:", result.outcome);
+
+        if (result.outcome === "accepted") {
+          console.log("✅ App instalada");
+          installBtn.style.display = "none";
+        } else {
+          console.log("❌ Instalación cancelada");
+        }
+
+        deferredPrompt = null;
+      });
+    }
   });
-});
-</script>
 
-    <main>
+  // 🔹 Inicializar AOS
+  AOS.init();
 
-      <!------------------------BOTON DESCARGAR------------------------------------->
-
-
-
-<!------------------------BANNER PRESENTACION------------------------------------->
-
-
-
-<div class="contenedor">
-  <div  class="logo lazy-michi"></div>
-<div class="botonesmenu">
-  <a onclick="mostrarGaleria()"  class="galeriaapp lazy-michi" style="background-image: url(./assets/galeriacartasicon.webp);">  </a>
-  <a href="que_es_michibox.html"  class="quees lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);" >  </a>
-  <div class="insta lazy-michi" style="background-image: url(./assets/boton_NOTICIAS.webp);">  </div>
-  <button id="installBtn" class="descargarapp lazy-michi" style="background-image: url(./assets/boton_descargar.webp);"></button>
-</div>
-<p class="descripcionbanner">Michi box - Juego de gatos colecionables. Proyectual Digitalización I 2025. diseño y realización: José Ignacio Pyptyk</p>
-</div>
-
-
-
-<div id="galeriaContainer" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 1000;">
-
-  <iframe src="galeria.html" style="width: 100%; height: 100%; border: none;"></iframe>
-
-</div>
-
-    </main>
-    <script>
-      AOS.init();
-    </script>
-    <script src="sketch/sketch.js"></script>
-
-<script>
+  // 🔹 Registrar Service Worker
   if ("serviceWorker" in navigator) {
     navigator.serviceWorker.register("service-worker.js")
       .then(() => console.log("Service Worker registrado"))
@@ -107,5 +92,6 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 </script>
 
-  </body>
+<script src="sketch/sketch.js"></script>
+</body>
 </html>
