--- a/galeria.html
+++ b/galeria.html
@@ -19,7 +19,7 @@
     <title>Michi Box Card Game</title>
     <link rel="stylesheet" type="text/css" href="style/normalize.css" />
   </head>
-  <body>
+  <body class="galeriabackground">
     <main>
 
 
