--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="insta lazy-michi" style="background-image: url(./assets/boton_NOTICIAS.webp);"></div>
     </div>
 
-<div class="fondonegrodescarga">
+<div id="installBtn" class="fondonegrodescarga">
   <DIV class="CONTENEDORDESCARGA">
-  <button id="installBtn" class="descargarbotonfixed lazy-michi"> DESCARGA LA APP </button>
+  <button  class="descargarbotonfixed lazy-michi"> DESCARGA LA APP </button>
   <DIV class="IMAGENDESCARGA"></DIV>
 </DIV>
 </div>
