--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             <div class="insta lazy-michi" style="background-image: url(./assets/boton_NOTICIAS.webp);"></div>
     </div>
 
-<div id="installBtn" class="fondonegrodescarga">
-  <DIV class="CONTENEDORDESCARGA">
-  <button  class="descargarbotonfixed lazy-michi"> DESCARGA LA APP </button>
-  <DIV class="IMAGENDESCARGA"></DIV>
-</DIV>
-</div>
+
+  <button id="installBtn" class="descargarbotonfixed "> 
+  <p>DESCARGAR APP</p>
+<div class="descargarbotonfixedimagen lazy-michi"></div>
+  </button>
+
 
     <p class="descripcionbanner">Michi box - Juego de gatos coleccionables. Proyectual Digitalización I 2025. diseño y realización: José Ignacio Pyptyk</p>
   </div>
