--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
     </div>
 
 
-  <button id="installBtn" class="descargarbotonfixed "> 
-  <p>DESCARGAR APP</p>
-<div class="descargarbotonfixedimagen lazy-michi"></div>
-  </button>
+  <button id="installBtn" class="descargarbotonfixed "> </button>
 
 
     <p class="descripcionbanner">Michi box - Juego de gatos coleccionables. Proyectual Digitalización I 2025. diseño y realización: José Ignacio Pyptyk</p>
