--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
 
-  <button id="installBtn" class="descargarapp"> </button>
+  <button id="installBtn" class="botondescargarapp"> </button>
 
 
     <p class="descripcionbanner">Michi box - Juego de gatos coleccionables. Proyectual Digitalización I 2025. diseño y realización: José Ignacio Pyptyk</p>
