--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     </div>
 
 
-  <button id="installBtn" class="botondescargarapp"> </button>
+  <button id="installBtn" class="botondescargarapp"> 
+    <p>DESCARGAR APP</p>
+    <img src="./assets/icon-192.png" alt="">
+  </button>
 
 
     <p class="descripcionbanner">Michi box - Juego de gatos coleccionables. Proyectual Digitalización I 2025. diseño y realización: José Ignacio Pyptyk</p>
