--- a/galeria.html
+++ b/galeria.html
@@ -202,15 +202,15 @@
 
     <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-31"></button>
-      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>INTERCAMBIA 10 VECES</b> <br> para desbloquear esta carta. </p>"> </div>
+      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE 10 CARTAS</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
     <div class="carta-wrapper" data-requiere-cantidad="20" data-pass="">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-32"></button>
-      <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>INTERCAMBIA 20 VECES</b> <br> para desbloquear esta carta. </p>"></div>
+      <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>CONSIGUE 20 CARTAS</b> <br> para desbloquear esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-pass="">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-33"></button>
-      <div class="overlay-bloqueo overespecial"></div>
+      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE TODAS LAS CARTAS NORMALES</b> <br> para desbloquear esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-pass="034">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
