--- a/quees.html
+++ b/quees.html
@@ -5,7 +5,7 @@
     <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
 
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     
     <link rel="stylesheet" tipe="text/css" href="style/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
