--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </button>
 
 
-    <p class="descripcionbanner">Michi box - Juego de gatos coleccionables. Proyectual Digitalización I 2025. diseño y realización: José Ignacio Pyptyk</p>
+    <p class="descripcionbanner">Michi box - Juego de gatos coleccionables. Proyectual Digitalización Cat.Gramajo I 2025. diseño y realización: José Ignacio Pyptyk</p>
   </div>
   <!------------------------------------------------------------------------>
 
