--- a/noticias.html
+++ b/noticias.html
@@ -23,6 +23,23 @@
     <main>
 
 
+      <div class="contenedorQUEESyNOTICIAS">
+
+                <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_003.webp);"></DIV>
+<p> Se está trabajando para implementar una tienda digital para la obtención de contenido MICHI BOX <br> Póximamente podrás disfrutar de la tienda en el juego.  </p>
+
+
+<DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_001.webp);"></DIV>
+<p> <b>● Actualización V1.1.5.</b>  <br> Se agregaron 6 cartas para desbloquear de rareza legendaria para la colección base de MICHI BOX. <br>  Conoce como desbloquear las cartas en la galería de cartas, reconocelas por su dorso dorado. <br> ● Desbloqueo por cantidad <br> ● Desbloqueo por intercambio <br> ● Desbloqueo por colección </p>
+
+
+        <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_002.webp);"></DIV>
+<p><b>● Actualización V1.1.0.</b> <br> Se actualizó el diseño UX UI para mejorar la usabilidad general, el aspecto visual y la interactividad de la interfaz. <br> El diseño minimalista e intuituvo busca una mejor y moderna experiencia  </p>
+
+
+      </div>
+      
+
 
     <DIV class="contenedorbotoncerrar">
 <a href="#" id="botonCerrar" class="botonatrasexpansiones" onclick="cerrarNoticiasDesdeIframe()">X</a>
