--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a onclick="mostrarGaleria()" class="galeriaapp lazy-michi" style="background-image: url(./assets/galeriacartasicon.webp);"></a>
       <a onclick="mostrarQuees()" class="quees lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);"></a>
       <a onclick="mostrarNoticias()" class="insta lazy-michi" style="background-image: url(./assets/boton_NOTICIAS.webp);"></a>
-            <div class="insta lazy-michi" style="background-image: url(./assets/boton_tienda.webp);"></div>
+            <div class="insta lazy-michi" style="background-image: url(./assets/boton_tienda.webp); filter: grayscale(1) brightness(0.8);"></div>
     </div>
 
 
