--- a/noticias.html
+++ b/noticias.html
@@ -26,7 +26,7 @@
       <div class="contenedorQUEESyNOTICIAS">
 
                 <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_003.webp);"></DIV>
-<p> Se está trabajando para implementar una tienda digital para la obtención de contenido MICHI BOX <br> Póximamente podrás disfrutar de la tienda en el juego.  </p>
+<p> Se está trabajando para implementar una tienda digitál para la obtención de contenido MICHI BOX <br> Póximamente podrás disfrutar de la tienda en el juego.  </p>
 
 
 <DIV class="imagenbannernoticia" style="background-image: url(./assets/NOTICIA_001.webp);"></DIV>
