--- a/quees.html
+++ b/quees.html
@@ -22,8 +22,36 @@
   <body class="queesbackground">
     <main>
 
+      <div class="contenedorQUEESyNOTICIAS">
 
-      <div class="contenedorQUEESyNOTICIAS"></div>
+                <DIV class="imagenbannernoticia" style="background-image: url(./assets/logoprograma03.webp);"></DIV>
+<p>
+  <b>¿QUÉ ES MICHI BOX?</b> <br><br> 
+  Michi Box es un juego de cartas coleccionables pensado para comenzar en lo físico y continuar colectivamente en lo virtual. Invita a jugar, coleccionar y compartir de forma activa, fomentando nuevas formas de relación y colaboración. <br> 
+  Michi Box propone una alternativa lúdica y colaborativa que estimula el juego en equipo, la creación y el fortalecimiento de vínculos. 
+  <br><br><br> 
+  <b>Diseño y realización del proyecto:<br> José Ignacio Pyptyk</b>  
+</p>
+
+                <DIV class="imagenbannernoticia" style="background-image: url(./assets/BANNER_QUEES_MECANICA.webp);"></DIV>
+<p>  
+  El proyecto está pensado para iniciar en lo físico y continuar colectivamente en el ámbito virtual. No puedes conseguir todas las cartas si solo te quedas coleccionando cartas físicas. <br> 
+  Los sobres físicos solo traen cartas de rareza NORMAL y, escasamente, alguna de rareza RARA. <br> 
+  Para poder completar las cartas RARAS deberás intercambiarlas en la galería de cartas de la APP.  
+</p>
+
+                <DIV class="imagenbannernoticia" style="background-image: url(./assets/BANNER_QUEES_TIPOS_DE_CARTAS.webp);"></DIV>
+<p> 
+  Puedes conseguir tres tipos de cartas: <br><br> 
+  <b>● Cartas NORMALES ● <br> ● Cartas RARAS ● <br> ● Cartas LEGENDARIAS ●</b>  
+  <br><br> 
+  Cada una con sus características. <br> 
+  Las cartas NORMALES se consiguen a través de aperturas de sobres físicos, al igual que las cartas RARAS, solo que estas con menor frecuencia. Algunas cartas RARAS solo se pueden conseguir en ediciones especiales de la marca o se obtienen como premio. <br> 
+  Las cartas LEGENDARIAS, a diferencia de las demás, solo se pueden conseguir si se cumplen determinadas condiciones o realizamos cierta acción, como lograr un número específico de intercambios o coleccionando ciertas cartas que nos ayudarán a obtener esa carta.  
+</p>
+
+
+      </div>
 
 
     <DIV class="contenedorbotoncerrar">
