--- a/galeria.html
+++ b/galeria.html
@@ -200,17 +200,17 @@
 
   <div class="contenedorcolores">
 
-    <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="">
+    <div class="carta-wrapper" data-requiere-cantidad="10" data-pass="031">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-31"></button>
       <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE 10 CARTAS</b> <br> para desbloquear esta carta. </p>"> </div>
     </div>
-    <div class="carta-wrapper" data-requiere-cantidad="20" data-pass="">
-      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-32"></button>
-      <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>CONSIGUE 20 CARTAS</b> <br> para desbloquear esta carta. </p>"></div>
+    <div class="carta-wrapper" data-requiere-cantidad="20" data-pass="032">
+      <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/032.webp);" data-target="carousel-item-32"></button>
+      <div class="overlay-bloqueo overespecial" data-cartel="<p> <b>CONSIGUE TODAS LAS CARTAS NORMALES</b> <br> para desbloquear esta carta. </p>"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
+    <div class="carta-wrapper" data-pass="033">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-33"></button>
-      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE TODAS LAS CARTAS NORMALES</b> <br> para desbloquear esta carta. </p>"></div>
+      <div class="overlay-bloqueo overespecial"  data-cartel="<p> <b>CONSIGUE TODAS LAS CARTAS RARAS</b> <br> para desbloquear esta carta. </p>"></div>
     </div>
     <div class="carta-wrapper" data-pass="034">
       <button class="cartaejemplo"   data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/034.webp);" data-target="carousel-item-34"></button>
@@ -723,7 +723,7 @@
         <div class="carousel-item Craro" id="carousel-item-28">
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/028/028_fondo.webp"/ style=" animation: psicodelicoBrillo 4s ease-in-out infinite;  animation: psicodelicoBrillo 4s ease-in-out infinite;">   
+              <img loading="lazy" class="medio" src="assets/cartas/028/028_fondo.webp"/ style=" animation: psicodelicoBrillo 4s ease-in-out infinite">   
               <div class="lineascolores" style="z-index: 9; transform: rotate(90deg); width: 150%;"></div>      
               <img loading="lazy" class="arriba" src="./assets/cartas/028/028_calado.webp" style="filter: brightness(0.7);" />
               <img loading="lazy" class="michi" src="assets/cartas/028/028_sombra_02.webp" style="z-index: 18; animation: rotacion 1.8s ease forwards;" >
@@ -738,6 +738,32 @@
 
 
         <!---------------------------------------------------------------CARTAS DORADAS-------------------------------------------------------------->  
+
+        <!-----------------------------------------032------------------------------------>
+
+<div class="carousel-item Clegendario" id="carousel-item-32">
+  <div class="tarjeta">
+    <div class="carta frente" data-circle="circle5 circle4">
+      <div class="michi" style="background-color: rgb(88, 72, 2);"></div>
+      <div class="lineascolores" style="z-index: 9; transform: rotate(-80deg) scale(1.75); filter:sepia(1) saturate(3)"></div>  
+      <div data-lazy="true" class="michi lazy-michi" data-style="
+        z-index: 17;
+        background-image: url('/assets/cartas/032/032_animacion.webp'); 
+        animation: animacion 0.5s steps(4) forwards infinite;
+        background-size: 1236px 450px;
+    "></div> 
+    <img loading="lazy" class="michi" src="./assets/cartas/032/032_gatos_atras.webp" style="z-index: 18; animation: flotar 0.8s ease-in-out alternate infinite;" />
+              <img loading="lazy" class="sombra" src="assets/cartas/032/032_gatos_medio.webp" style="animation: flotar 0.5s ease-in-out alternate infinite;" />
+              <img loading="lazy" class="michi" src="assets/cartas/032/032_borde.webp" style="z-index: 20;" />
+           <div class="codigoqrdecarta sinQRNORMAL"> 
+                  <DIV class="michiconfundido"></DIV>
+                   <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS LEGENDARIAS</p>
+                </div> 
+    </div>
+    <div class="carta trasera"> </div>
+  </div>
+</div>
+<!-----------------------------------------------------------------------------> 
 
         <!-----------------------------------------034------------------------------------>
 
