--- a/galeria.html
+++ b/galeria.html
@@ -79,8 +79,8 @@
       <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/003.webp);" data-target="carousel-item-3"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
-    <div class="carta-wrapper" data-pass="">
-      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-4"></button>
+    <div class="carta-wrapper" data-pass="MICHIBAG">
+      <button class="cartaejemplo"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/004.webp);" data-target="carousel-item-4"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="WORKALLDAY">
@@ -295,7 +295,7 @@
          <div class="carousel-item Cnormal" id="carousel-item-4" >
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/004.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES INTERCAMBIAR CARTAS NORMALES</p>
