--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
   <!------------------------BANNER PRESENTACION------------------------------------->
   <div class="contenedor">
     <div class="logo lazy-michi"></div>
-    <div class="botonesmenu">
+<div class="CONTENEDORESBOTONESMENU">
+      <div class="botonesmenu">
       <a onclick="mostrarGaleria()" class="galeriaapp lazy-michi" style="background-image: url(./assets/galeriacartasicon.webp);"></a>
       <a onclick="mostrarQuees()" class="quees lazy-michi" style="background-image: url(./assets/boton_QUE_ES.webp);"></a>
       <a onclick="mostrarNoticias()" class="insta lazy-michi" style="background-image: url(./assets/boton_NOTICIAS.webp);"></a>
             <div class="insta lazy-michi" style="background-image: url(./assets/boton_tienda.webp); filter: grayscale(1) brightness(0.8);"></div>
     </div>
+</div>
 
 
   <button id="installBtn" class="botondescargarapp"> 
