--- a/quees.html
+++ b/quees.html
@@ -30,7 +30,7 @@
   Michi Box es un juego de cartas coleccionables pensado para comenzar en lo físico y continuar colectivamente en lo virtual. Invita a jugar, coleccionar y compartir de forma activa, fomentando nuevas formas de relación y colaboración. <br> 
   Michi Box propone una alternativa lúdica y colaborativa que estimula el juego en equipo, la creación y el fortalecimiento de vínculos. 
   <br><br><br> 
-  <b>Diseño y realización del proyecto:<br> José Ignacio Pyptyk</b>  
+  <b>Idea, Diseño y realización del proyecto:<br> José Ignacio Pyptyk</b>  
 </p>
 
                 <DIV class="imagenbannernoticia" style="background-image: url(./assets/BANNER_QUEES_MECANICA.webp);"></DIV>
