--- a/galeria.html
+++ b/galeria.html
@@ -36,6 +36,7 @@
 <!------------------------PANTALLA NEGRA CARGANDO ------------------------------------>
 <div class="pantallacargando">
    <div class="spinner"></div>
+   <div class="logospinner"></div>
 </div>
 
 <!------------------------PANTALLA NEGRA CARGANDO al desbloquear carta------------------------------------->
@@ -43,6 +44,7 @@
 
       <div class="pantallaNegra" id="pantallaNegra">
  <div class="spinner"></div>
+    <div class="logospinner"></div>
       </div>
 
 
