--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 <main>
 
 
+<div class="pantallacargando" style="  animation: cargando 4s !important;">
+   <div class="spinner"></div>
+   <div class="logospinner"></div>
+</div>
+
+
   <!------------------------BANNER PRESENTACION------------------------------------->
   <div class="contenedor">
     <div class="logo lazy-michi"></div>
