--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
   <!------------------------BANNER PRESENTACION------------------------------------->
   <div class="contenedor">
-    <div class="logo lazy-michi"></div>
+    <div class="logo lazy-michi">
+      <DIV class="IMAGENLOGOBANNER lazy-michi"></DIV>
+    </div>
 <div class="CONTENEDORESBOTONESMENU">
       <div class="botonesmenu">
       <a onclick="mostrarGaleria()" class="iconomenu lazy-michi" style="background-image: url(./assets/galeriacartasicon.webp);"></a>
